--- a/css/fqa.css
+++ b/css/fqa.css
@@ -1,7 +1,8 @@
 
 body {
-	/* padding-top: 60px; 60px to make the container go all the way to the bottom of the topbar */
-	font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
+	/* padding-top: 60px; 60px to make the container go all the way to the bottom of the topbar 
+	font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif; */
+	font-family: 'Lato', sans-serif;
 	font-weight: 300;
 }
 
